--- a/src/main/resources/PM/Main-menu.fxml
+++ b/src/main/resources/PM/Main-menu.fxml
@@ -1,11 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="615.0" prefWidth="882.0" style="-fx-background-color: #222222;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="PM.MainMenuController">
    <children>
-      <AnchorPane layoutY="82.0" prefHeight="533.0" prefWidth="221.0" style="-fx-background-color: #3d3d3d;" />
+      <AnchorPane layoutY="82.0" prefHeight="533.0" prefWidth="221.0" style="-fx-background-color: #3d3d3d;">
+         <children>
+            <Button layoutX="20.0" layoutY="484.0" mnemonicParsing="false" prefHeight="14.0" prefWidth="182.0" text="+" textAlignment="CENTER">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Button>
+         </children></AnchorPane>
       <Pane layoutY="29.0" prefHeight="53.0" prefWidth="882.0" style="-fx-background-color: #363636;" />
       <AnchorPane layoutX="221.0" layoutY="82.0" prefHeight="533.0" prefWidth="221.0" style="-fx-background-color: #363636;" />
    </children>
