--- a/src/main/resources/PM/Main-menu.fxml
+++ b/src/main/resources/PM/Main-menu.fxml
@@ -1,21 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="615.0" prefWidth="882.0" style="-fx-background-color: #222222;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="PM.MainMenuController">
    <children>
       <AnchorPane layoutY="82.0" prefHeight="533.0" prefWidth="221.0" style="-fx-background-color: #3d3d3d;">
          <children>
-            <Button layoutX="20.0" layoutY="484.0" mnemonicParsing="false" prefHeight="14.0" prefWidth="182.0" text="+" textAlignment="CENTER">
+            <VBox fx:id="MainMenu_VBox" prefHeight="492.0" prefWidth="221.0" />
+            <Button fx:id="MainMenu_addButton" layoutX="20.0" layoutY="492.0" mnemonicParsing="false" onAction="#addButtonClicked" prefHeight="14.0" prefWidth="182.0" text="+" textAlignment="CENTER">
                <font>
                   <Font size="16.0" />
                </font>
             </Button>
-         </children></AnchorPane>
+         </children>
+      </AnchorPane>
       <Pane layoutY="29.0" prefHeight="53.0" prefWidth="882.0" style="-fx-background-color: #363636;" />
       <AnchorPane layoutX="221.0" layoutY="82.0" prefHeight="533.0" prefWidth="221.0" style="-fx-background-color: #363636;" />
+      <Pane fx:id="MainMenu_editPane" layoutX="442.0" layoutY="82.0" prefHeight="533.0" prefWidth="440.0">
+         <children>
+            <TextField fx:id="MainMenu_editPane_websiteName" layoutX="6.0" layoutY="108.0" prefHeight="25.0" prefWidth="425.0" promptText="website_name" />
+            <TextField fx:id="MainMenu_editPane_url" layoutX="8.0" layoutY="189.0" prefHeight="25.0" prefWidth="418.0" promptText="url" />
+            <TextField fx:id="MainMenu_editPane_login" layoutX="3.0" layoutY="277.0" prefHeight="25.0" prefWidth="425.0" promptText="login" />
+            <PasswordField fx:id="MainMenu_editPane_password" layoutX="5.0" layoutY="371.0" prefHeight="25.0" prefWidth="425.0" promptText="password" />
+            <Button fx:id="MainMenu_editPane_add" layoutX="176.0" layoutY="457.0" mnemonicParsing="false" text="Добавить" />
+         </children>
+      </Pane>
    </children>
 </AnchorPane>
