--- a/src/main/resources/PM/Style.css
+++ b/src/main/resources/PM/Style.css
@@ -7,3 +7,7 @@
     -fx-scale-y: 0.95;
     -fx-scale-x: 0.95;
 }
+
+.dialog-pane .dialog-pane .container .title-bar {
+    -fx-background-color: #292a2d;
+}
